--- a/index.css
+++ b/index.css
@@ -3,11 +3,11 @@ body{
 }
     
     /* Header */
-header{
-    /* border: 2px solid red; */
+/* header{
+    border: 2px solid red;
     height:70px;
-    /* display: inline-block; */
-    /* background-color: #e9e9e9; */
+    display: inline-block;
+    background-color: #e9e9e9;
 }
 #logo{
     height: 30px;
@@ -18,7 +18,7 @@ header{
 }
 #brand{
     height: 50px;
-    /* margin-left:1%; */
+    margin-left:1%;
     margin-top:-1%;
     float:left;
 }
@@ -58,7 +58,7 @@ header{
 #mystories{
     color: inherit;
     text-decoration: none;
-    /* margin-left: 20%; */
+    margin-left: 20%;
 }
 #create{
     height:30px;
@@ -71,7 +71,34 @@ header{
 #profile{
    background-color: #fff;
    height:25px;
+} */
+
+header{
+    /* border: 2px solid purple; */
+    height:77px;
 }
+#brand1{
+    height: 30px;
+    float:left;
+}
+.write{
+    color:#000;
+    margin-left:1%;
+}
+#create{
+    height:30px;
+}
+#premium{
+    background-color: #2a1c60;
+    color: #fff;
+ }
+ .profile{
+    color:#000;
+    margin-left:2%;
+ }
+
+
+
 /* Section1 */
 #section1{
     /* border:2px solid violet; */
@@ -124,18 +151,21 @@ header{
     height:435px;
     width:80%;
     margin-left: 10%;
-    /* margin-top: 2%; */
+    margin-top: 2%;
 }
-.imgDiv{
-    /* border: 2px solid brown; */
+/* .imgDiv{
+    border: 2px solid brown;
     height:380px;
     width:20%;
     margin-left: 5%;
     margin-top: 2%;
-}
+} */
 .img{
+    /* border: 2px solid brown; */
     height:360px;
-    width: 100%;
+    width:20%;
+    margin-left: 5%;
+    margin-top: 2%;
 }
 .img:hover{
     transform:scale(1.1);
@@ -149,25 +179,32 @@ header{
     margin-top: -33%;
 }
 .title{
-    margin-left: 2%;
-    /* margin-top: 2%; */
     /* border: 2px solid brown; */
+    margin-left: 2%;
+    margin-top: 2%;
 }
 .complete{
     margin-left: 2%;
     margin-top: 1%;
+    /* border: 2px solid brown; */
 }
 .read{
     margin-top: 1%;
+    /* border: 2px solid brown; */
 }
 .add{
+   /* border: 2px solid brown; */
    font-size: 30px;
    color: #343a40;
+   height:50px;
+   margin-top: 1%;
 }
 .startReading{
+    /* border: 2px solid brown; */
     margin-left: 2%;
 }
 .overview{
+    /* border: 2px solid brown; */
     margin-left: 2%;
     margin-top: 2%;
 }
@@ -180,6 +217,8 @@ header{
     /* background-color: #f2fdfd; */
 }
 
+
+
 /* Footer */
 footer{
     /* border:2px solid yellowgreen; */
@@ -191,4 +230,298 @@ footer{
     font-family: cursive;
     color: #ff6612;
     font-size: 18px;
+}
+
+#coupon{
+    height:500px;
+    width:27%;
+    margin-top: -110%;
+    margin-left: 37%;
+    z-index:100;
+    position:relative;
+    /* background-color: black; */
+    /* visibility: hidden; */
+    opacity: 1 ;
+    /* position: absolute; */
+    /* display: none; */
+    /* background: rgba(0, 0, 0, 0.562); */
+    /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
+    /* backdrop-filter: blur(4px); */
+    /* -webkit-backdrop-filter: blur(4px); */
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+ 
+#main{
+    /* background-color: orange; */
+    height:1677px;
+    /* opacity:.5 ; */
+}
+#popupimg{
+    width:100%;
+    height:500px;
+    margin-top: -54%;
+    box-shadow: 8px 8px 64px #bbbbbb, -8px -8px 64px #65656567;
+}
+#close{
+    margin-top: -50%;
+    margin-left: 90%;
+    position: absolute;
+    height:25px;
+    width:25px;
+    /* transform: translate(-50%, -50%); */
+    /* -ms-transform: translate(-50%, -50%); */
+    background-color: #e2e2e2;
+    color: black;
+    font-size: 15px;
+    /* padding: 12px 24px; */
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
+@media screen and (max-width:1200px){
+    #section2{
+        height:387px;
+    }
+    #section3{
+        height:415px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:395px;
+    }
+    .img{
+        height:370px;
+        width:20%;
+    }
+    .contentDiv{
+        margin-left: 30%;
+        margin-top: -35%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 15px;
+    }
+}
+@media screen and (max-width:1100px){
+    #section2{
+        height:420px;
+    }
+    #section3{
+        height:440px;
+    }
+    .img{
+        height:370px;
+        width:27%;
+    }
+    .contentDiv{
+        margin-left: 37%;
+        margin-top: -38%;
+        height:270px;
+        width:60%;
+    }
+}
+@media screen and (max-width:1000px){
+    #section2{
+        height:387px;
+    }
+    #section3{
+        height:415px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:395px;
+    }
+    .img{
+        height:370px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -38%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 15px;
+    }
+}
+@media screen and (max-width:950px){
+    #section2{
+        height:375px;
+    }
+    #section3{
+        height:395px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:377px;
+    }
+    .img{
+        height:355px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -41%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width:900px){
+    #section2{
+        height:350px;
+    }
+    #section3{
+        height:370px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:365px;
+    }
+    .img{
+        height:335px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -42%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 14px;
+    }
+}
+@media screen and (max-width:850px){
+    .img{
+        height:315px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -41%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 13px;
+    }
+}
+@media screen and (max-width:800px){
+    .contentDiv{
+        /* margin-left: 40%; */
+        margin-top: -41%;
+        /* height:270px; */
+        /* width:60%; */
+    }
+}
+@media screen and (max-width:750px){
+    
+    .contentDiv{
+        /* margin-left: 40%; */
+        margin-top: -43%;
+        /* height:270px; */
+        /* width:60%; */
+    }
+}
+@media screen and (max-width:700px){
+    #section2{
+        height:340px;
+    }
+    #section3{
+        height:360px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:340px;
+    }
+    .img{
+        height:290px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -49%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 12px;
+    }
+}
+@media screen and (max-width:650px){
+    
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -51%;
+        height:270px;
+        width:60%;
+    }
+}
+@media screen and (max-width:600px){
+    #section2{
+        height:340px;
+    }
+    #section3{
+        height:360px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:340px;
+    }
+    .img{
+        height:290px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -60%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 12px;
+    }
+}
+@media screen and (max-width:500px){
+    #section2{
+        height:340px;
+    }
+    #section3{
+        height:360px;
+    }
+    .allcontent{
+        width:90%;
+        margin-left: 5%;
+        height:340px;
+    }
+    .img{
+        height:290px;
+        width:30%;
+    }
+    .contentDiv{
+        margin-left: 40%;
+        margin-top: -67%;
+        height:270px;
+        width:60%;
+    }
+    .overview{
+        font-size: 12px;
+    }
 }
