--- a/index.css
+++ b/index.css
@@ -97,7 +97,33 @@ header{
     margin-left:2%;
  }
 
+ #main{
+    /* background-color: orange; */
+    height:1650px;
+    /* opacity:.5 ; */
+}
 
+/* ModeGeo */
+#modeGeo{
+    /* display: inline-block; */
+    /* border:2px solid violet; */
+    height:49px;
+    margin-top: -0.5%;
+    /* margin-left: 10%; */
+}
+
+#light{
+    border: none;
+    margin-left: 95%;
+    margin-top: 0.5%;
+    /* background-color: black;
+    color:white; */
+}
+
+.mydark{
+    background-color: black;
+    color:white;
+}
 
 /* Section1 */
 #section1{
@@ -108,15 +134,15 @@ header{
     margin-left: 10%;
     display: inline-block;
 }
-.greeting-text{
+#greeting-text{
     font-family:"Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
     margin-top: 1%;
-    color:#222;
+    /* color:#222; */
     font-size:32px;
 }
 #subtitle{
     font-size: 17px;
-    color:#222;
+    /* color:#222; */
 }
 #heading{
     margin-left: 1%;
@@ -197,6 +223,8 @@ header{
    font-size: 30px;
    color: #343a40;
    height:50px;
+   width:50px;
+   border-radius:50px;
    margin-top: 1%;
 }
 .startReading{
@@ -222,7 +250,7 @@ header{
 /* Footer */
 footer{
     /* border:2px solid yellowgreen; */
-    height:40px;
+    height:30px;
 }
 #footDiv{
     margin-top: 1%;
@@ -238,7 +266,7 @@ footer{
     margin-top: -110%;
     margin-left: 37%;
     z-index:100;
-    position:relative;
+    position:fixed;
     /* background-color: black; */
     /* visibility: hidden; */
     opacity: 1 ;
@@ -254,19 +282,14 @@ footer{
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
  
-#main{
-    /* background-color: orange; */
-    height:1677px;
-    /* opacity:.5 ; */
-}
 #popupimg{
     width:100%;
     height:500px;
-    margin-top: -54%;
+    margin-top: -40%;
     box-shadow: 8px 8px 64px #bbbbbb, -8px -8px 64px #65656567;
 }
 #close{
-    margin-top: -50%;
+    margin-top: -37%;
     margin-left: 90%;
     position: absolute;
     height:25px;
